--- a/Segmenting and Clustering Neighborhoods in Toronto - Assignment.ipynb
+++ b/Segmenting and Clustering Neighborhoods in Toronto - Assignment.ipynb
@@ -1000,7 +1000,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Oh look, a map of Toronto!"
+    "### Oh look, a map of Toronto!\n",
+    "\n",
+    "### Actually, the map isn't showing in GitHub so you may have to download the notebook and run it to see the image"
    ]
   },
   {
